force-app/main/default/objects/Test_Iterations__c/Test_Iterations__c.object-meta.xml
<CustomObject>
    <description>TOOLKIT - An object that represents a specific time a test script is modified for testing.</description>
    <label>Test Iteration</label>
    <nameField>
        <displayFormat>TestIterations-{0000000}</displayFormat>
        <label>Test Iteration ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Iterations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>