force-app/main/default/objects/Test_Iterations__c/fields/Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Execution_Date__c</fullName>
    <description>Execution date of test iteration</description>
    <label>Execution Date</label>
    <type>Date</type>
</CustomField>