force-app/main/default/objects/Test_Iterations__c/fields/Execution_Type__c.field-meta.xml
<CustomField>
    <fullName>Execution_Type__c</fullName>
    <description>Execution type of test iteration</description>
    <label>Execution Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unit Test</fullName>
            </value>
            <value>
                <fullName>SIT</fullName>
            </value>
            <value>
                <fullName>Regression Test</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>