force-app/main/default/objects/Test_Iterations__c/fields/Test_Script__c.field-meta.xml
<CustomField>
    <fullName>Test_Script__c</fullName>
    <description>Test script for test iteration</description>
    <label>Test Script</label>
    <referenceTo>Test_Script__c</referenceTo>
    <relationshipLabel>Test Iterations</relationshipLabel>
    <relationshipName>Test_Execution_Summary</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>